--- a/ITM/Base.lproj/Main.storyboard
+++ b/ITM/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,94 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ITM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y3G-cn-vpL">
+                                <rect key="frame" x="16" y="607" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="XD6-Lq-Q32"/>
+                                </constraints>
+                                <state key="normal" title="Sign-up">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="ibm-logo-png-transparent-background" translatesAutoresizingMaskIntoConstraints="NO" id="qZZ-H1-QIB">
+                                <rect key="frame" x="67" y="20" width="240" height="128"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="IBM E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FRj-gv-dGK">
+                                <rect key="frame" x="16" y="289" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="IQL-eQ-5Xp"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eDs-yZ-rG6">
+                                <rect key="frame" x="16" y="337" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="bgf-wm-QzU"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dcS-D9-Gbv">
+                                <rect key="frame" x="16" y="559" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.4392156862745098" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Xw7-4J-8Ex"/>
+                                </constraints>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="leading" secondItem="eDs-yZ-rG6" secondAttribute="leading" id="8qb-uk-gdn"/>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="289" id="DiD-KL-mdO"/>
+                            <constraint firstItem="dcS-D9-Gbv" firstAttribute="leading" secondItem="eDs-yZ-rG6" secondAttribute="leading" id="GKD-zt-nWm"/>
+                            <constraint firstAttribute="bottom" secondItem="Y3G-cn-vpL" secondAttribute="bottom" constant="20" symbolic="YES" id="Pji-LL-nMe"/>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="RvR-gY-bOZ"/>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="WnF-Va-s4Z"/>
+                            <constraint firstItem="dcS-D9-Gbv" firstAttribute="leading" secondItem="Y3G-cn-vpL" secondAttribute="leading" id="ahO-2h-poE"/>
+                            <constraint firstItem="dcS-D9-Gbv" firstAttribute="trailing" secondItem="Y3G-cn-vpL" secondAttribute="trailing" id="ed1-3Y-MyY"/>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="centerX" secondItem="qZZ-H1-QIB" secondAttribute="centerX" id="fYj-7u-CBp"/>
+                            <constraint firstItem="Y3G-cn-vpL" firstAttribute="top" secondItem="dcS-D9-Gbv" secondAttribute="bottom" constant="8" symbolic="YES" id="nhh-5H-ThZ"/>
+                            <constraint firstItem="FRj-gv-dGK" firstAttribute="trailing" secondItem="eDs-yZ-rG6" secondAttribute="trailing" id="qVX-kr-gGe"/>
+                            <constraint firstItem="dcS-D9-Gbv" firstAttribute="trailing" secondItem="eDs-yZ-rG6" secondAttribute="trailing" id="sgG-JA-u5Q"/>
+                            <constraint firstItem="eDs-yZ-rG6" firstAttribute="top" secondItem="FRj-gv-dGK" secondAttribute="bottom" constant="8" symbolic="YES" id="uzj-aC-GK4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="h4o-if-pWL">
+            <objects>
+                <viewController id="zFa-kK-clJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hUE-04-lGM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="TRX-sK-yi1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2TD-Dh-8gD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="762" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ibm-logo-png-transparent-background" width="1000" height="500"/>
+    </resources>
 </document>
