--- a/ITM/Base.lproj/Main.storyboard
+++ b/ITM/Base.lproj/Main.storyboard
@@ -59,6 +59,9 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="zFa-kK-clJ" kind="show" id="aE1-K3-Xja"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
