--- a/ITM/Base.lproj/Main.storyboard
+++ b/ITM/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
         <!--Discovery-->
         <scene sceneID="h4o-if-pWL">
             <objects>
-                <viewController id="zFa-kK-clJ" sceneMemberID="viewController">
+                <viewController id="zFa-kK-clJ" customClass="DiscoveryViewController" customModule="ITM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hUE-04-lGM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -102,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2TD-Dh-8gD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="782" y="133"/>
+            <point key="canvasLocation" x="781.60000000000002" y="132.68365817091455"/>
         </scene>
     </scenes>
     <resources>
